<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pulcer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_list">UserList</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_register">Register</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="validate_email_msg">Email required.</string>
    <string name="validate_email_invalid_msg">Invalid Email.</string>
    <string name="validate_pwd_msg">Password must be at least 6 characters and contain one digit and one capital letter.</string>
    <string name="validate_old_pwd_msg">Please enter old password.</string>
    <string name="validate_new_pwd_msg">Please enter new password.</string>
    <string name="validate_cnf_pwd_msg">Please enter password confirmation.</string>
    <string name="validate_cnf_pwd_not_match">New password and confirm password does not match.</string>
    <string name="validate_pwd_length_msg">Password must at least 4 character long.</string>
    <string name="validate_bday_msg">Birth date required.</string>
    <string name="validate_name_msg">User name required.</string>
    <string name="validate_bdate_msg">Please edit the birth date.</string>
    <string name="validate_loggedin_user">You can not delete the main user.</string>
    <string name="validate_search_pill">Please enter pill name.</string>
    <string name="dialog_title">Plus</string>
    <string name="title_activity_searchmed">Searchmed</string>
    <string name="title_activity_useragreement">UserAgreement</string>
    <string name="title_activity_ulcer">Ulcer</string>
    <string name="title_activity_survey">Survey</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="user_agreement">User Agreement</string>
    <string name="riskassessment">Risk Assessment</string>
    <string name="register_now">New? Click to register</string>
    <string name="register_accept">By registering, you agree to these terms and conditions.</string>
    
	<string name="dlg_from_camera">Capture Image</string>
	<string name="dlg_cancel">Cancel</string>
	<string name="dlg_from_gallery">Select from Gallery</string>
    
	<color name="Green">#b0c32f</color>
	<color name="White">#FFFFFF</color>
	<color name="Black">#000000</color>
	<color name="text_black">#555555</color>
	<color name="Gray_Dark">#707070</color>
	<color name="ligth_black">#363636</color>
	<color name="txt_gray">#898989</color><!-- a6a6a6 -->
	<color name="txt_green">#869544</color>
	<color name="txt_black">#555555</color>
	<color name="setting_txt_gray">#e4e4e4</color>
	<color name="tab_txt_disable">#848484</color>
	<color name="tab_txt_active">#555555</color>
	<color name="dlg_back">#ebebeb</color>
	<color name="transparent">#00000000</color>
	<color name="trans_1">#00000000</color>
	<color name="user_list_bg">#ebebeb</color>
	<color name="dlg_txt_gray">#959595</color>
	<color name="dlg_bg_grey">#ebebeb</color>  
	<color name="list_upcomming_color">#eaf9fc</color>
	<color name="list_disable_bg">#f2f2f2</color>
	<string name="name">Name</string>
	<string name="password">Password</string>
	<string name="email">Email</string>
	<string name="confirmPassword">Confirm Password</string>
	<string name="okay">OK</string>
	<string name="submit">Submit</string>
	
	<string name="setting_logout">Logout</string>
	<string name="setting_edit_profile">Edit Profile</string>
	<string name="setting_alerts">Alerts</string>
	<string name="setting_terms">Terms</string>
	<string name="setting_privacy">Privacy</string>
	<string name="setting_title">Settings</string>
	<string name="update_profile">Edit Profile</string>
	<string name="progress_title_updating_profile">Updating profile. Please wait...</string>
	<string name="btn_save">Save</string>
	
	<string name="stage1">Stage 1</string>
	<string name="stage2">Stage 2</string>
	<string name="stage3">Stage 3</string>
	<string name="stage4">Stage 4</string>
	<string name="stage5">Unstageable</string>
	
	<string name="healing0">Healing</string>
	<string name="healing1">Not Healing</string>
	<string name="healing2">Healed</string>
	
	<string name="internal0">Bone</string>
	<string name="internal1">Fascia</string>
	<string name="internal2">Joint Capsule</string>
	<string name="internal3">Prosthesis</string>
	<string name="internal4">Pin</string>
	<string name="internal5">Subcutaneous Tissue</string>
	<string name="internal6">Tendon</string>
	<string name="internal7">Muscle</string>
	
	<string name="location0">Back of Head</string>
	<string name="location1">Chin</string>
	<string name="location2">Shoulder</string>
	<string name="location3">Scapula</string>
	<string name="location4">Elbow</string>
	<string name="location5">Sacrum/Coccyx</string>
	<string name="location6">Thoracic Spine</string>
	<string name="location7">Lumbar Spine</string>
	<string name="location8">Trochanter</string>
	<string name="location9">Iliac Crest</string>
	<string name="location10">Buttock</string>
	<string name="location11">Knee</string>
	<string name="location12">Heel</string>
	<string name="location13">Ankle</string>
	<string name="location14">Ear</string>
	<string name="location15">Cheek</string>
	<string name="location16">Nose</string>
	<string name="location17">Nostril</string>
	
	<string name="sensory1">Completely Limited</string>
	<string name="sensory2">Very Limited</string>
	<string name="sensory3">Slightly Limited</string>
	<string name="sensory4">No Impairment</string>
	
	<string name="moisture1">Constantly Moist</string>
	<string name="moisture2">Very Moist</string>
	<string name="moisture3">Occasionally Moist</string>
	<string name="moisture4">Rarely Moist</string>
	
	<string name="activity1">Bedfast</string>
	<string name="activity2">Chairfast</string>
	<string name="activity3">Walks Occasionally</string>
	<string name="activity4">Walks Frequently</string>
	
	<string name="mobility1">Completely Immobile</string>
	<string name="mobility2">Very Limited</string>
	<string name="mobility3">Slightly Limited</string>
	<string name="mobility4">No Limitation</string>
	
	<string name="nutrition1">Very Poor</string>
	<string name="nutrition2">Inadequate</string>
	<string name="nutrition3">Adequate</string>
	<string name="nutrition4">Excellent</string>
	
	<string name="friction1">Significant Problem</string>
	<string name="friction2">Problem</string>
	<string name="friction3">Potential Problem</string>
	<string name="friction4">No Apparent Problem</string>
	
	<string name="oxygenation1">Extremely Compromised</string>
	<string name="oxygenation2">Compromised</string>
	<string name="oxygenation3">Adequate</string>
	<string name="oxygenation4">Excellent</string>
	
	<string-array name="accordion_braden_sections">
        <item>Sensory Perception</item>
        <item>Moisture</item>
        <item>Activity</item>
        <item>Mobility</item>
        <item>Nutrition</item>
        <item>Friction and Shear</item>
        <item>Oxygenation</item>
    </string-array>

    <integer-array name="accordion_braden_visibility">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
    </integer-array>
	
	<string-array name="accordion_ulcer_sections">
        <item>Stage</item>
        <item>Healing Status</item>
        <item>Internal</item>
        <item>Location</item>
    </string-array>

    <integer-array name="accordion_ulcer_visibility">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>0</item>
    </integer-array>
    
    <string-array name="ulcer_accordion_sections">
        <item>Stage Info</item>
        <item>Healing Status</item>
        <item>Visible Internal Structures</item>
        <item>Location</item>
        <item>Device-Related</item>
    </string-array>

    <integer-array name="ulcer_accordion_visibility">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
    </integer-array>
</resources>