<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:accordion="http://schemas.android.com/apk/res-auto/com.example.pulcer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="400dp" >

        <com.me.pulcer.widget.AccordionView
            android:id="@+id/accordion_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            accordion:header_layout_fold_button_id="@id/foldButton"
            accordion:header_layout_id="@layout/accordion_header_survey"
            accordion:header_layout_label_id="@id/foldText"
            accordion:header_layout_subtext_id="@id/foldSubtext"
            accordion:section_bottom="@layout/accordion_footer"
            accordion:section_container="@layout/accordion_section"
            accordion:section_container_parent="@id/section_content"
            accordion:section_headers="@array/accordion_braden_sections"
            accordion:section_visibility="@array/accordion_braden_visibility"
            android:background="#fff5f5f5"
            android:orientation="vertical" >

            <RadioGroup
		        android:id="@+id/radioSensory"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
 
		        <RadioButton
		            android:id="@+id/sensory1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateSensorySubtext"
		            android:text="@string/sensory1" />
		 
		        <RadioButton
		            android:id="@+id/sensory2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateSensorySubtext"
		            android:text="@string/sensory2" />
		        
		        <RadioButton
		            android:id="@+id/sensory3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateSensorySubtext"
		            android:text="@string/sensory3" />
		        
		        <RadioButton
		            android:id="@+id/sensory4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateSensorySubtext"
		            android:text="@string/sensory4" />
	 
	    	</RadioGroup>

            <RadioGroup
		        android:id="@+id/radioMoisture"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
 
		        <RadioButton
		            android:id="@+id/moisture1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateMoistureSubtext"
		            android:text="@string/moisture1" />
		 
		        <RadioButton
		            android:id="@+id/moisture2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateMoistureSubtext"
		            android:text="@string/moisture2" />
		        
		        <RadioButton
		            android:id="@+id/moisture3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateMoistureSubtext"
		            android:text="@string/moisture3" />
		        
		        <RadioButton
		            android:id="@+id/moisture4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateMoistureSubtext"
		            android:text="@string/moisture4" />
	 
	    	</RadioGroup>

            <RadioGroup
		        android:id="@+id/radioActivity"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
 
		        <RadioButton
		            android:id="@+id/activity1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateActivitySubtext"
		            android:text="@string/activity1" />
		 
		        <RadioButton
		            android:id="@+id/activity2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateActivitySubtext"
		            android:text="@string/activity2" />
		        
		        <RadioButton
		            android:id="@+id/activity3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateActivitySubtext"
		            android:text="@string/activity3" />
		        
		        <RadioButton
		            android:id="@+id/activity4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateActivitySubtext"
		            android:text="@string/activity4" />
	 
	    	</RadioGroup>

            <RadioGroup
		        android:id="@+id/radioMobility"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
 
		        <RadioButton
		            android:id="@+id/mobility1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateMobilitySubtext"
		            android:text="@string/mobility1" />
		 
		        <RadioButton
		            android:id="@+id/mobility2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateMobilitySubtext"
		            android:text="@string/mobility2" />
		        
		        <RadioButton
		            android:id="@+id/mobility3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateMobilitySubtext"
		            android:text="@string/mobility3" />
		        
		        <RadioButton
		            android:id="@+id/mobility4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateMobilitySubtext"
		            android:text="@string/mobility4" />
	 
	    	</RadioGroup>

            <RadioGroup
		        android:id="@+id/radioNutrition"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
 
		        <RadioButton
		            android:id="@+id/nutrition1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateNutritionSubtext"
		            android:text="@string/nutrition1" />
		 
		        <RadioButton
		            android:id="@+id/nutrition2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateNutritionSubtext"
		            android:text="@string/nutrition2" />
		        
		        <RadioButton
		            android:id="@+id/nutrition3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateNutritionSubtext"
		            android:text="@string/nutrition3" />
		        
		        <RadioButton
		            android:id="@+id/nutrition4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateNutritionSubtext"
		            android:text="@string/nutrition4" />
	 
	    	</RadioGroup>
	    	
            <RadioGroup
		        android:id="@+id/radioFriction"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
 
		        <RadioButton
		            android:id="@+id/friction1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateFrictionSubtext"
		            android:text="@string/friction1" />
		 
		        <RadioButton
		            android:id="@+id/friction2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateFrictionSubtext"
		            android:text="@string/friction2" />
		        
		        <RadioButton
		            android:id="@+id/friction3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateFrictionSubtext"
		            android:text="@string/friction3" />
		        
		        <RadioButton
		            android:id="@+id/friction4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateFrictionSubtext"
		            android:text="@string/friction4" />
	 
	    	</RadioGroup>
	    	
            <RadioGroup
		        android:id="@+id/radioOxygenation"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
 
		        <RadioButton
		            android:id="@+id/oxygenation1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateOxygenationSubtext"
		            android:text="@string/oxygenation1" />
		 
		        <RadioButton
		            android:id="@+id/oxygenation2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateOxygenationSubtext"
		            android:text="@string/oxygenation2" />
		        
		        <RadioButton
		            android:id="@+id/oxygenation3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateOxygenationSubtext"
		            android:text="@string/oxygenation3" />
		        
		        <RadioButton
		            android:id="@+id/oxygenation4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateOxygenationSubtext"
		            android:text="@string/oxygenation4" />
	 
	    	</RadioGroup>
        </com.me.pulcer.widget.AccordionView>
        
        </ScrollView>
        
        <Button
            android:id="@+id/submitBraden"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:onClick="submitBraden"
            android:text="@string/submit" />

</LinearLayout>
