<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" >

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="next"
        android:text="@string/register" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="back"
        android:text="@string/back" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnBack"
        android:layout_below="@+id/btnRegister"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtRegisterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnBack"
        android:layout_below="@+id/txtName"
        android:layout_marginLeft="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnBack"
        android:layout_below="@+id/txtRegisterEmail"
        android:layout_marginLeft="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtRegisterPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnBack"
        android:layout_below="@+id/txtRegisterPassword"
        android:layout_marginLeft="24dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword" />

    <DatePicker
        android:id="@+id/dateDob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnBack"
        android:layout_below="@+id/txtRegisterPasswordConfirm"
        android:layout_marginLeft="24dp" />

    <Button
        android:id="@+id/btnMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gender_male_selector"
        android:layout_below="@+id/btnBack"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/btnBack"
        android:text="@string/male" />

    <Button
        android:id="@+id/btnFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gender_female_selector"
        android:layout_alignBaseline="@+id/btnMale"
        android:layout_alignBottom="@+id/btnMale"
        android:layout_toRightOf="@+id/btnMale"
        android:text="@string/female" />

    <TextView
        android:id="@+id/tvAgreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnMale"
        android:layout_alignTop="@+id/btnRegister"
        android:layout_toLeftOf="@+id/btnRegister"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:onClick="agreement"
        android:text="@string/register_accept" />

</RelativeLayout>